make.out
i586-pc-msdosdjgpp-gcc -O2 -g -Iinclude -fcommon -c src/ship.c -o src/ship.o
In file included from src/ship.c:2:
include/ship.h:38:5: error: unknown type name 'tick_t'
   38 |     tick_t last_fire;    // Use tick_t
      |     ^~~~~~
make: *** [Makefile:21: src/ship.o] Error 1
